--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     padding: 20px;
     width: 210mm;
     height: 265mm;
-    border: 2px solid black;
+/*     border: 2px solid black; */
     background-color: rgb(255, 255, 255);
 }
 
