--- a/style.css
+++ b/style.css
@@ -104,6 +104,25 @@
     font-size: 8.5px;
 
 }
+.loai150 {
+    text-align: center;
+    width: 24mm;
+    height: 9.5mm;
+    padding-left: 2px;
+    padding-right: 2px;
+    border: 0.1px dashed black;
+    background-color: white;
+}
+
+.loai150 h3 {
+    font-size: 8px;
+}
+
+.loai150 p {
+    margin-top: 4px;
+    font-size: 6px;
+
+}
 
 label {
     display: block;
