--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@
     height: 12mm;
     border: 1px dotted black;
     background-color: white;
+    margin: -0.5px;
 }
 
 .loai300 h3 {
@@ -74,6 +75,7 @@
     padding-right: 2px;
     border: 1px dashed black;
     background-color: white;
+    margin: -0.5px;
 }
 
 .loai250 h3 {
@@ -93,6 +95,7 @@
     padding-right: 2px;
     border: 1px dashed black;
     background-color: white;
+    margin: -0.5px;
 }
 
 .loai200 h3 {
@@ -112,6 +115,7 @@
     padding-right: 2px;
     border: 0.1px dashed black;
     background-color: white;
+    margin: -0.5px;
 }
 
 .loai150 h3 {
